<resources>
    <string name="app_name">ClimbTracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_color">Color</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="purple">Purple</string>
    <string name="pink">Pink</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="setter">Setter</string>
    <string name="grade">Grade</string>
    <string name="date">Date Set</string>
    <string name="add_route">ADD ROUTE</string>
    <string name="start">Started from start</string>
    <string name="finish">Finished to finish</string>
    <string name="submit_attempt">Submit Attempt</string>
    <string name="set_on_date">Set on [date]</string>
    <string name="reset">Reset</string>
</resources>
