<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddProblemFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvGradeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="24sp"
            android:text="@string/grade"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/etNewGrade"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/tvGradeTitle"
            app:layout_constraintBottom_toBottomOf="@+id/tvGradeTitle"
            app:layout_constraintStart_toEndOf="@id/tvGradeTitle"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvColorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="24sp"
            android:text="@string/str_color"
            app:layout_constraintTop_toBottomOf="@+id/tvGradeTitle"
            app:layout_constraintStart_toStartOf="parent"/>

        <RadioGroup
            android:id="@+id/rgColors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="@+id/tvColorTitle"
            app:layout_constraintStart_toEndOf="@+id/tvColorTitle">
            <RadioButton
                android:id="@+id/rbColorRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"/>
            <RadioButton
                android:id="@+id/rbColorOrange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orange"/>
            <RadioButton
                android:id="@+id/rbColorYellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellow"/>
            <RadioButton
                android:id="@+id/rbColorGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green"/>
            <RadioButton
                android:id="@+id/rbColorBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue"/>
            <RadioButton
                android:id="@+id/rbColorPurple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purple"/>
            <RadioButton
                android:id="@+id/rbColorPink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pink"/>
            <RadioButton
                android:id="@+id/rbColorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/white"/>
            <RadioButton
                android:id="@+id/rbColorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/black"/>
        </RadioGroup>

        <TextView
            android:id="@+id/tvSetterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="24sp"
            android:text="@string/setter"
            app:layout_constraintTop_toBottomOf="@+id/rgColors"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/etNewSetter"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/tvSetterTitle"
            app:layout_constraintBottom_toBottomOf="@+id/tvSetterTitle"
            app:layout_constraintStart_toEndOf="@id/tvSetterTitle"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="24sp"
            android:text="@string/date"
            app:layout_constraintTop_toBottomOf="@+id/tvSetterTitle"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/etNewDate"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/tvDateTitle"
            app:layout_constraintBottom_toBottomOf="@+id/tvDateTitle"
            app:layout_constraintStart_toEndOf="@id/tvDateTitle"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnProblemSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="12dp"
            android:text="@string/add_route"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/tvDateTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>